--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vite preview",
     "build": "vite build",
     "lint": "vue-cli-service lint",
-    "dev": "vite"
+    "dev": "vite",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
@@ -25,6 +26,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "serve": "^14.2.3",
     "vite": "^3.0.8",
     "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vue-cli-plugin-vuetify": "~2.5.8"
